<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">艺考部落</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login_phone_num">手机号</string>
    <string name="login_password">密码</string>
    <string name="login_auth_code">验证码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="login_auto">自动登录</string>
    <string name="retrieve_password">找回密码</string>
    <string name="login_forget_password">忘记密码</string>
    <string name="input_login_num">请输入账号</string>
    <string name="input_login_password">请输入密码</string>
    <string name="input_login_authcode">输入验证码</string>
    <string name="input_error_authcode">验证码错误</string>
    <string name="student">学生</string>
    <string name="teacher">老师</string>
    <string name="organization">机构</string>
    <string name="register_phone_num">手机号</string>
    <string name="register_user_name">用户名</string>
    <string name="register_password">密码</string>
    <string name="register_name">姓名</string>
    <string name="register_school">学校</string>
    <string name="register_grade">年级</string>
    <string name="register_subject">科目</string>
    <string name="register_organ_name">机构名</string>
    <string name="register_permissions">权限号</string>
    <string name="register_agree_clause">同意注册服务条款</string>
    <string name="register_clause">注册服务条款</string>
    <string name="ok">确定</string>
    <string name="cancal">取消</string>
    <string name="launcher_about">艺考部落</string>
    <string name="studio">画室</string>
    <string name="cultural_organization">文化机构</string>
    <string name="registerinfo_not_empty">账号、用户名或密码不能为空</string>
    <string name="not_agree_registerclause">未同意注册服务条款</string>
    <string name="not_open">暂未开放</string>
    <string name="email">邮箱</string>

    <string-array name="categorys">
        <item>画室</item>
        <item>文化机构</item>
        <item>资讯</item>
        <item>招生</item>
        <item>论坛</item>
        <item>作品点评</item>
        <item>院校</item>
        <item>更多</item>
    </string-array>
    <string-array name="atelier_categories">
        <item>简介</item>
        <item>全景</item>
        <item>作品</item>
        <item>辉煌成就</item>
    </string-array>

</resources>